# zlib

./: .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac  keywords.txt  library.json  library.properties  platformio.ini  submodule-commit.sh  submodule-update.sh
examples/: Makefile.am  readme.txt
examples/native/: main.cpp
examples/testfile/: Makefile.am  testfile.ino  testmain.cpp
src/: Makefile.am  libz.pc.in
tests/: Makefile.am
